--- a/cn/cn/contributors.html
+++ b/cn/cn/contributors.html
@@ -76,21 +76,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">切換語言</option>
-                    <option value="https://volarisnet.nl/bcx/contributors.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/contributors.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/contributors.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/contributors.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/contributors.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/contributors.html">русский</option>
+                    <option value="/contributors.html">English</option>
+                    <option value="/cn/contributors.html">简体中文</option>
+                    <option value="/cn/cn/contributors.html">繁體中文</option>
+                    <option value="/jp/contributors.html">日本語</option>
+                    <option value="/ko/contributors.html">한국어</option>
+                    <option value="/ru/contributors.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -129,12 +129,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">切換語言</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/contributors.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/contributors.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/contributors.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/contributors.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/contributors.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/contributors.html" class="link">русский</a>
+                          <a href="/contributors.html" class="link">English</a>
+                          <a href="/cn/contributors.html" class="link">简体中文</a>
+                          <a href="/cn/cn/contributors.html" class="link">繁體中文</a>
+                          <a href="/jp/contributors.html" class="link">日本語</a>
+                          <a href="/ko/contributors.html" class="link">한국어</a>
+                          <a href="/ru/contributors.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>              
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     	
           <div class="col-md-3 col-sm-6 margin-bottom animating fade-in" data-anim-type="fade-in" data-anim-delay="100">
             <div class="section-white box-shadow-2 hover-shadow-2 padding-bottom-3">
-                <img src="https://volarisnet.nl/bcx/images/denis.jpg" alt="contributors" class="img-responsive margin-bottom-2">
+                <img src="/images/denis.jpg" alt="contributors" class="img-responsive margin-bottom-2">
                 <h5 class="font-weight-6 uppercase margin-bottom-1">Denis</h5>
                 <p class="less4">Designer / Webdeveloper</p>
             </div>
@@ -184,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <div class="col-md-3 col-sm-6 margin-bottom animating fade-in" data-anim-type="fade-in" data-anim-delay="200">
             <div class="section-white box-shadow-2 hover-shadow-2 padding-bottom-3">
-                <img src="https://volarisnet.nl/bcx/images/tim.jpg" alt="contributors" class="img-responsive margin-bottom-2">
+                <img src="/images/tim.jpg" alt="contributors" class="img-responsive margin-bottom-2">
                 <h5 class="font-weight-6 uppercase margin-bottom-1">Tim</h5>
                 <p class="less4">Marketing</p>
             </div>
@@ -192,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <div class="col-md-3 col-sm-6 margin-bottom animating fade-in" data-anim-type="fade-in" data-anim-delay="300">
             <div class="section-white box-shadow-2 hover-shadow-2 padding-bottom-3">
-                <img src="https://volarisnet.nl/bcx/images/tangwen.jpg" alt="contributors" class="img-responsive margin-bottom-2">
+                <img src="/images/tangwen.jpg" alt="contributors" class="img-responsive margin-bottom-2">
                 <h5 class="font-weight-6 uppercase margin-bottom-1">Tangwen</h5>
                 <p class="less4">Translator</p>
             </div>
@@ -200,7 +200,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <div class="col-md-3 col-sm-6 animating fade-in" data-anim-type="fade-in" data-anim-delay="400">
             <div class="section-white box-shadow-2 hover-shadow-2 padding-bottom-3">
-                <img src="https://volarisnet.nl/bcx/images/join-us.jpg" alt="contributors" class="img-responsive margin-bottom-2">
+                <img src="/images/join-us.jpg" alt="contributors" class="img-responsive margin-bottom-2">
                 <h5 class="font-weight-6 uppercase margin-bottom-1"><a href="contributors.html">Join us today!</a></h5>
                 <p class="less4">Marketing</p>
             </div>
@@ -241,7 +241,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <p><strong>聯繫我們</strong></p>
     <p>電子郵箱: <a href="mailto:hellobcx@mail.com">hellobcx@mail.com</a></p>
-    <p>電報群: <a target="_blank" href="https://t.me/BCXTeam">@BCXTeam</a></p>
+    <p>電報群: <a target="_blank" href="https://t.meTeam">@BCXTeam</a></p>
 </div>
 
 <div class="clearfix"></div>
@@ -290,8 +290,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">查看最新推文</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">查閱Reddit</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">查看最新推文</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">查閱Reddit</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">查閱Bitcointalk</a></li>
                 </ul>
               </div>
@@ -331,10 +331,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>            
         <!--end item-->
