--- a/cn/cn/documentation.html
+++ b/cn/cn/documentation.html
@@ -77,21 +77,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">切換語言</option>
-                    <option value="https://volarisnet.nl/bcx/documentation.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/documentation.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/documentation.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/documentation.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/documentation.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/documentation.html">русский</option>
+                    <option value="/documentation.html">English</option>
+                    <option value="/cn/documentation.html">简体中文</option>
+                    <option value="/cn/cn/documentation.html">繁體中文</option>
+                    <option value="/jp/documentation.html">日本語</option>
+                    <option value="/ko/documentation.html">한국어</option>
+                    <option value="/ru/documentation.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -130,12 +130,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">切換語言</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/documentation.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/documentation.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/documentation.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/documentation.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/documentation.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/documentation.html" class="link">русский</a>
+                          <a href="/documentation.html" class="link">English</a>
+                          <a href="/cn/documentation.html" class="link">简体中文</a>
+                          <a href="/cn/cn/documentation.html" class="link">繁體中文</a>
+                          <a href="/jp/documentation.html" class="link">日本語</a>
+                          <a href="/ko/documentation.html" class="link">한국어</a>
+                          <a href="/ru/documentation.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>               
@@ -258,8 +258,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">查看最新推文</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">查閱Reddit</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">查看最新推文</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">查閱Reddit</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">查閱Bitcointalk</a></li>
                 </ul>
               </div>
@@ -299,10 +299,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>            
         <!--end item-->
