--- a/jp/about.html
+++ b/jp/about.html
@@ -90,21 +90,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">言語を変更します</option>
-                    <option value="https://volarisnet.nl/bcx/about.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/about.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/about.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/about.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/about.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/about.html">русский</option>
+                    <option value="/about.html">English</option>
+                    <option value="/cn/about.html">简体中文</option>
+                    <option value="/cn/cn/about.html">繁體中文</option>
+                    <option value="/jp/about.html">日本語</option>
+                    <option value="/ko/about.html">한국어</option>
+                    <option value="/ru/about.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -143,12 +143,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">言語を変更します</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/about.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/about.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/about.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/about.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/about.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/about.html" class="link">русский</a>
+                          <a href="/about.html" class="link">English</a>
+                          <a href="/cn/about.html" class="link">简体中文</a>
+                          <a href="/cn/cn/about.html" class="link">繁體中文</a>
+                          <a href="/jp/about.html" class="link">日本語</a>
+                          <a href="/ko/about.html" class="link">한국어</a>
+                          <a href="/ru/about.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>
@@ -252,7 +252,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2 class="font-weight-7 text-center">スマート契約</h2>
               <p class="line-height-2 less2 padding-bottom-4">このバージョンでは、スマート契約機能が追加されているが、スマート契約機能を有効にするためにマイナーが投票する必要がある。</p>
 
-                <p class="line-height-2 less2"><img class="img-responsive" src="https://volarisnet.nl/bcx/images/smart-contract.png" alt="BCX Smart Contracts"></p>
+                <p class="line-height-2 less2"><img class="img-responsive" src="/images/smart-contract.png" alt="BCX Smart Contracts"></p>
 
             </div>
           </div>
@@ -383,8 +383,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">最新のツイートを見る</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">Redditを表示</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">最新のツイートを見る</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">Redditを表示</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">Bitcointalkを表示</a></li>
                 </ul>
               </div>
@@ -424,10 +424,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>
         <!--end item-->
