--- a/jp/for-developers.html
+++ b/jp/for-developers.html
@@ -80,21 +80,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">言語を変更します</option>
-                    <option value="https://volarisnet.nl/bcx/for-developers.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/for-developers.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/for-developers.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/for-developers.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/for-developers.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/for-developers.html">русский</option>
+                    <option value="/for-developers.html">English</option>
+                    <option value="/cn/for-developers.html">简体中文</option>
+                    <option value="/cn/cn/for-developers.html">繁體中文</option>
+                    <option value="/jp/for-developers.html">日本語</option>
+                    <option value="/ko/for-developers.html">한국어</option>
+                    <option value="/ru/for-developers.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -133,12 +133,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">言語を変更します</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/for-developers.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/for-developers.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/for-developers.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/for-developers.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/for-developers.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/for-developers.html" class="link">русский</a>
+                          <a href="/for-developers.html" class="link">English</a>
+                          <a href="/cn/for-developers.html" class="link">简体中文</a>
+                          <a href="/cn/cn/for-developers.html" class="link">繁體中文</a>
+                          <a href="/jp/for-developers.html" class="link">日本語</a>
+                          <a href="/ko/for-developers.html" class="link">한국어</a>
+                          <a href="/ru/for-developers.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>
@@ -195,7 +195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
             <p><strong>連絡方式</strong></p>
             <p>メール: <a href="mailto:hellobcx@mail.com">hellobcx@mail.com</a></p>
-            <p>テレグラム・グループ：@BCXTeam <a target="_blank" href="https://t.me/BCXTeam">@BCXTeam</a></p>
+            <p>テレグラム・グループ：@BCXTeam <a target="_blank" href="https://t.meTeam">@BCXTeam</a></p>
         </div>
         
       <div class="clearfix sec-padding"></div>
@@ -274,8 +274,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">最新のツイートを見る</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">Redditを表示</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">最新のツイートを見る</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">Redditを表示</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">Bitcointalkを表示</a></li>
                 </ul>
               </div>
@@ -315,10 +315,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>            
         <!--end item-->
