--- a/ko/explorer.html
+++ b/ko/explorer.html
@@ -74,21 +74,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">언어 변경</option>
-                    <option value="https://volarisnet.nl/bcx/explorer.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/explorer.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/explorer.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/explorer.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/explorer.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/explorer.html">русский</option>
+                    <option value="/explorer.html">English</option>
+                    <option value="/cn/explorer.html">简体中文</option>
+                    <option value="/cn/cn/explorer.html">繁體中文</option>
+                    <option value="/jp/explorer.html">日本語</option>
+                    <option value="/ko/explorer.html">한국어</option>
+                    <option value="/ru/explorer.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -127,12 +127,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">언어 변경</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/explorer.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/explorer.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/explorer.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/explorer.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/explorer.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/explorer.html" class="link">русский</a>
+                          <a href="/explorer.html" class="link">English</a>
+                          <a href="/cn/explorer.html" class="link">简体中文</a>
+                          <a href="/cn/cn/explorer.html" class="link">繁體中文</a>
+                          <a href="/jp/explorer.html" class="link">日本語</a>
+                          <a href="/ko/explorer.html" class="link">한국어</a>
+                          <a href="/ru/explorer.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>  
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p><a href="https://bitpay.com/" target="_blank">라이트닝과 분산 시스템을 통한 보다 빠른 전송 기술을 체험하실 수 있습니다</a>.</p>
           <p class="padding-bottom-2"><a href="https://github.com/ho1to/bitcore" target="_blank">BitcoinX 브라우저 사용으로 조금 더 편리한 거래 환경을 경험하시길 바랍니다</a>.</p>
           <br>
-          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https://bcx.info/" target="_blank">BITCOINX 블록 브로우저 바로가기</a>
+          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/.info/" target="_blank">BITCOINX 블록 브로우저 바로가기</a>
 
         </div>
         <!--end col-->
@@ -255,8 +255,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">최신 트윗보기</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">Reddit보기</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">최신 트윗보기</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">Reddit보기</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">Bitcointalk보기</a></li>
                 </ul>
               </div>
@@ -296,10 +296,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>            
         <!--end item-->
