--- a/ko/faqs.html
+++ b/ko/faqs.html
@@ -82,21 +82,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span class="custom-dropdown small">
                 <select onChange="window.location.href=this.value">
                     <option value="#">언어 변경</option>
-                    <option value="https://volarisnet.nl/bcx/faqs.html">English</option>
-                    <option value="https://volarisnet.nl/bcx/cn/faqs.html">简体中文</option>
-                    <option value="https://volarisnet.nl/bcx/cn/cn/faqs.html">繁體中文</option>
-                    <option value="https://volarisnet.nl/bcx/jp/faqs.html">日本語</option>
-                    <option value="https://volarisnet.nl/bcx/ko/faqs.html">한국어</option>
-                    <option value="https://volarisnet.nl/bcx/ru/faqs.html">русский</option>
+                    <option value="/faqs.html">English</option>
+                    <option value="/cn/faqs.html">简体中文</option>
+                    <option value="/cn/cn/faqs.html">繁體中文</option>
+                    <option value="/jp/faqs.html">日本語</option>
+                    <option value="/ko/faqs.html">한국어</option>
+                    <option value="/ru/faqs.html">русский</option>
                 </select>
             </span>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -135,12 +135,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <div class="dropdown">
                         <a id="changeLanguage" role="button" data-toggle="dropdown" data-target="#" href="#" class="link-hover">언어 변경</a>
                         <div role="menu" aria-labelledby="changeLanguage" class="dropdown-content">
-                          <a href="https://volarisnet.nl/bcx/faqs.html" class="link">English</a>
-                          <a href="https://volarisnet.nl/bcx/cn/faqs.html" class="link">简体中文</a>
-                          <a href="https://volarisnet.nl/bcx/cn/cn/faqs.html" class="link">繁體中文</a>
-                          <a href="https://volarisnet.nl/bcx/jp/faqs.html" class="link">日本語</a>
-                          <a href="https://volarisnet.nl/bcx/ko/faqs.html" class="link">한국어</a>
-                          <a href="https://volarisnet.nl/bcx/ru/faqs.html" class="link">русский</a>
+                          <a href="/faqs.html" class="link">English</a>
+                          <a href="/cn/faqs.html" class="link">简体中文</a>
+                          <a href="/cn/cn/faqs.html" class="link">繁體中文</a>
+                          <a href="/jp/faqs.html" class="link">日本語</a>
+                          <a href="/ko/faqs.html" class="link">한국어</a>
+                          <a href="/ru/faqs.html" class="link">русский</a>
                         </div>
                       </div>
                     </div>  
@@ -304,8 +304,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com/bcx_team">최신 트윗보기</a></li>
-                  <li><a target="_blank" href="https://www.reddit.com/r/BCXofficial/">Reddit보기</a></li>
+                  <li><a target="_blank" href="https://twitter.com_team">최신 트윗보기</a></li>
+                  <li><a target="_blank" href="https://www.reddit.com/rofficial/">Reddit보기</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">Bitcointalk보기</a></li>
                 </ul>
               </div>
@@ -345,10 +345,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
               <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user/bcx_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me/BCX_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>            
         <!--end item-->
