fix spell error and bcx info link

--- a/cn/index.html
+++ b/cn/index.html
@@ -816,7 +816,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="clearfix margin-bottom-6"></div>
 
         <div class="col-md-6 text-right respo margin-bottom"><a href="exchanges.html" class="sitebutton-1 sty2 dark2 roboto font-weight-7 uppercase">查看所有交易所</a></div>
-        <div class="col-md-6 text-left respo"><a id="js-overlay-trigger" href="javascript:void(0)" data-element="#js-overlay-content-exchanges" class="sitebutton-1 sty2 dark roboto font-weight-7 uppercase">立即支持BitcoinX！</a></div>
+        <div class="col-md-6 text-left respo"><a id="js-overlay-trigger" href="javascript:void(0)" data-element="#js-overlay-content-exchanges" class="sitebutton-1 sty2 dark roboto font-weight-7 lowercase">立即支持BitcoinX！</a></div>
 
         <div class="overlay-content" id="js-overlay-content-exchanges" style="display: none;">
             <h1 class="font-weight-5">立即支持BitcoinX！</h1>
