--- a/explorer.html
+++ b/explorer.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Originally written by <a href="https://bitpay.com/" target="_blank">bitpay</a>.</p>
           <p class="padding-bottom-2">View the Source code <a href="https://github.com/ho1to/bitcore" target="_blank">here</a> and in linked packages.</p>
           <br>
-          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/.info/" target="_blank">View the BitcoinX Explorer</a>
+          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/bcx.info/" target="_blank">View the BitcoinX Explorer</a>
 
         </div>
         <!--end col-->
