--- a/jp/explorer.html
+++ b/jp/explorer.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p><a href="https://bitpay.com/" target="_blank">元々はbitpayによって書かれました</a>。</p>
           <p class="padding-bottom-2"><a href="https://github.com/ho1to/bitcore" target="_blank">関連するソースコードとインストールパッケージを参照します。</a>.</p>
           <br>
-          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/.info/" target="_blank">BitcoinXブラウザに移動します。</a>
+          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/bcx.info/" target="_blank">BitcoinXブラウザに移動します。</a>
 
         </div>
         <!--end col-->
