--- a/ko/explorer.html
+++ b/ko/explorer.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p><a href="https://bitpay.com/" target="_blank">라이트닝과 분산 시스템을 통한 보다 빠른 전송 기술을 체험하실 수 있습니다</a>.</p>
           <p class="padding-bottom-2"><a href="https://github.com/ho1to/bitcore" target="_blank">BitcoinX 브라우저 사용으로 조금 더 편리한 거래 환경을 경험하시길 바랍니다</a>.</p>
           <br>
-          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/.info/" target="_blank">BITCOINX 블록 브로우저 바로가기</a>
+          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/bcx.info/" target="_blank">BITCOINX 블록 브로우저 바로가기</a>
 
         </div>
         <!--end col-->
