--- a/ru/explorer.html
+++ b/ru/explorer.html
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Изначально написан <a class="underline" href="https://bitpay.com" target="_blank">bitpay</a>.</p>
           <p class="padding-bottom-2">Посмотреть <a class="underline" href="https://github.com/ho1to/bitcore" target="_blank">исходный код</a> и прикреплённые пакеты</p>
           <br>
-          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/.info" target="_blank">Перейти к BitcoinX браузеру</a>
+          <a class="but-stbutton-3 roboto padding-top-7 font-weight-7 uppercase" href="https:/bcx.info/" target="_blank">Перейти к BitcoinX браузеру</a>
 
         </div>
         <!--end col-->
